--- a/index.html
+++ b/index.html
@@ -62,6 +62,29 @@ body {
   display: none;
 }
 
+#video-panel {
+  position: fixed;
+  top: 130px; /* below top panel */
+  left: 50%;
+  transform: translateX(-50%);
+  width: 60vw;
+  max-width: 80vw;
+  background: rgba(255,255,255,0.35);
+  backdrop-filter: blur(10px);
+  border-radius: 15px;
+  padding: 10px 20px;
+  color: #fff;
+  text-align: center;
+  display: none;
+  z-index: 16;
+}
+
+#video-panel a {
+  color: #0af;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 #license-bar {
   position: fixed;
   bottom: 0;
@@ -125,6 +148,11 @@ If you would like to see my other work click <span id="here-link">here</span>.</
   Manhattan Beach at Half Moon Bay, California located in the San Francisco Bay Area. The Ritz-Carlton can be seen on the distant cliffs. The coastal shores are lined with miles of golf courses.
 </div>
 
+<div id="video-panel">
+  <a href="https://www.youtube.com/watch?v=sfYM1-_WbWk" target="_blank">Click Here to Watch a 360 Video of this Location</a>
+  <p style="color:#ccc; font-size:0.9em; margin-top:5px;">Click Anywhere to Dismiss this Video</p>
+</div>
+
 <div id="license-bar">Loading license...</div>
 
 <script src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
@@ -140,9 +168,13 @@ const viewer = pannellum.viewer('panorama', {
 });
 
 const overlay = document.getElementById('overlay');
+const topPanel = document.getElementById('top-panel');
+const videoPanel = document.getElementById('video-panel');
+
 overlay.addEventListener('click', () => {
   overlay.style.display = 'none';
-  document.getElementById('top-panel').style.display = 'block';
+  topPanel.style.display = 'block';
+  videoPanel.style.display = 'block';
 });
 
 // Load LICENSE
@@ -154,6 +186,14 @@ fetch('LICENSE').then(r => r.ok ? r.text() : 'LICENSE file not found.').then(tex
 document.getElementById('here-link').addEventListener('click', e => {
   e.stopPropagation(); // don't dismiss overlay
   window.open('https://linktr.ee/lexofdystopia','_blank');
+});
+
+// Dismiss video panel if clicked outside link
+videoPanel.addEventListener('click', (e) => e.stopPropagation());
+document.addEventListener('click', (e) => {
+  if (!videoPanel.contains(e.target) && videoPanel.style.display === 'block') {
+    videoPanel.style.display = 'none';
+  }
 });
 </script>
 </body>
