--- a/index.html
+++ b/index.html
@@ -6,120 +6,99 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css"/>
 <link href="https://fonts.googleapis.com/css2?family=Saira:wght@400;700&display=swap" rel="stylesheet">
 <style>
-body {
-  margin: 0;
-  font-family: 'Saira', sans-serif;
-  overflow: hidden;
+body, #overlay, #overlay-content, #hotspot-panel, #video-link-panel, #license-bar, #tooltip-preview, #qr-overlay, #youtube-overlay, #vr-button, #top-qr-button {
   user-select: none;
 }
+body { margin:0; font-family:'Saira',sans-serif; overflow:hidden; position:relative; }
+#panorama { width:100vw; height:100vh; position:relative; z-index:0; }
 
-#panorama {
-  width: 100vw;
-  height: 100vh;
-}
-
-#overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background: rgba(0,0,0,0.4);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 20;
-  cursor: pointer;
-}
-
-#overlay-content {
-  width: 50vw;
-  max-width: 90vw;
-  height: 50vh;
-  max-height: 90vh;
-  background: rgba(255,255,255,0.2);
-  backdrop-filter: blur(10px);
-  padding: 20px 30px;
-  border-radius: 20px;
-  color: #fff;
-  text-align: center;
-  line-height: 1.4em;
-  font-size: 1.2em;
-}
-
-#top-panel {
-  position: fixed;
-  top: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-  background: rgba(255,255,255,0.35);
-  backdrop-filter: blur(10px);
-  padding: 10px 20px;
-  border-radius: 15px;
-  color: #fff;
-  text-align: center;
-  z-index: 15;
-  display: none;
-}
-
-#video-panel {
-  position: fixed;
-  top: 130px; /* below top panel */
-  left: 50%;
-  transform: translateX(-50%);
-  width: 60vw;
-  max-width: 80vw;
-  background: rgba(255,255,255,0.35);
-  backdrop-filter: blur(10px);
-  border-radius: 15px;
-  padding: 10px 20px;
-  color: #fff;
-  text-align: center;
-  display: none;
-  z-index: 16;
-}
-
-#video-panel a {
-  color: #0af;
-  text-decoration: underline;
-  cursor: pointer;
-}
-
+/* LICENSE bar */
 #license-bar {
   position: fixed;
   bottom: 0;
-  left: 0;
-  width: 100%;
-  background: rgba(255,255,255,0.35);
+  left:50%;
+  transform:translateX(-50%);
+  max-width:90%;
+  background: rgba(0,0,0,0.1);
   backdrop-filter: blur(10px);
-  color: #fff;
-  padding: 10px 20px;
-  font-size: 14px;
-  z-index: 10;
-  overflow-x: auto;
-  white-space: nowrap;
+  color:#fff;
+  padding:10px 20px;
+  font-size:14px;
+  z-index:10;
+  overflow-y:auto;
+  text-align:center;
+  white-space:pre-wrap;
+  border-radius:10px;
 }
 
-.instructions {
-  margin-top:15px;
+/* Intro overlay */
+#overlay { position: fixed; top:0; left:0; width:100vw; height:100vh;
+  background: rgba(0,0,0,0.35);
+  display:flex; flex-direction:column; align-items:center; justify-content:center;
+  z-index:20; cursor:pointer;
 }
-
-.instructions h3 {
-  text-decoration: underline;
+#overlay-content { background: rgba(255,255,255,0.3); backdrop-filter: blur(10px);
+  padding:40px 50px; border-radius:20px; color:#fff; max-width:600px; text-align:center;
+  font-size:1.5em; pointer-events:auto; line-height:1.4em;
 }
+#overlay-content a { color:#fff; text-decoration:underline; cursor:pointer; position:relative; }
+#instructions-line { text-decoration:underline; margin-bottom:10px; font-weight:bold; }
+#instructions-list { text-align:left; margin:0 auto; max-width:400px; line-height:1.6em; }
+#dismiss-message { margin-top:15px; font-size:0.9em; color:#ccc; text-align:center; }
 
-.instructions ul {
-  padding-left:20px;
+/* Tooltip preview */
+#tooltip-preview { display:none; position:absolute; width:270px; background: rgba(0,0,0,0.85);
+  color:#fff; text-align:center; padding:10px; border-radius:8px; z-index:30; pointer-events:none; font-size:0.8em; line-height:1.2em; }
+
+/* Manhattan Beach hotspot panel */
+#hotspot-panel { position: fixed; top:20px; left:50%; transform: translateX(-50%);
+  background: rgba(0,0,0,0.1); backdrop-filter: blur(10px);
+  padding:15px 20px; border-radius:15px; color:#fff; font-size:1em;
+  text-align:center; max-width:80%; z-index:15; display:none; transition:opacity 0.5s ease; }
+
+/* 360 Video link panel */
+#video-link-panel { position: fixed; top: calc(20px + 140px); left:50%; transform:translateX(-50%);
+  background: rgba(0,0,0,0.1); backdrop-filter: blur(10px);
+  padding:10px 15px; border-radius:12px; color:#fff; font-size:1em;
+  text-align:center; max-width:60%; z-index:15; cursor:pointer; display:none; transition:opacity 0.5s ease; }
+
+/* YouTube modal overlay */
+#youtube-overlay { display:none; position:fixed; top:0; left:0; width:100vw; height:100vh;
+  background: rgba(0,0,0,0.5); z-index:30; display:flex; align-items:center; justify-content:center; opacity:0; transition:opacity 0.4s; }
+#youtube-content { background: rgba(255,255,255,0.3); backdrop-filter:blur(10px); border-radius:20px;
+  padding:20px; max-width:80%; width:800px; height:450px; display:flex; flex-direction:column;
+  align-items:center; justify-content:center; }
+#youtube-content iframe { width:100%; height:100%; border:none; border-radius:12px; }
+#youtube-content p { color:#ccc; margin-top:10px; font-size:0.9em; text-align:center; }
+
+/* QR modal overlay */
+#qr-overlay { display:none; position:fixed; top:0; left:0; width:100vw; height:100vh;
+  background: rgba(0,0,0,0.5); z-index:30; display:flex; align-items:center; justify-content:center;
+  opacity:0; transition:opacity 0.4s; }
+#qr-content { background: rgba(255,255,255,0.3); backdrop-filter:blur(10px);
+  border-radius:20px; padding:10px;
+  max-width:15vw; max-height:15vh; display:flex;
+  flex-direction:column; align-items:center; justify-content:center; }
+#qr-content img { max-width:100%; max-height:100%; object-fit:contain; border-radius:8px; }
+#qr-content p { color:#ccc; margin-top:10px; font-size:0.9em; text-align:center; }
+
+/* QR and VR buttons */
+#top-qr-button, #vr-button {
+  position:fixed; top:10px;
+  background: rgba(0,0,0,0.15); backdrop-filter: blur(10px);
+  color:#fff; padding:8px 15px; border-radius:12px; font-family:'Saira',sans-serif; cursor:pointer; z-index:25;
 }
+#top-qr-button { right:10px; }
+#vr-button { right:10px; top:60px; display:none; } /* under QR button */
 
-.instructions li::before {
-  content: '• ';
-}
+/* Pulse effect */
+.pulse-white { animation:pulseWhite 2s ease-in-out; }
+@keyframes pulseWhite { 0% { background: rgba(0,0,0,0.1); } 50% { background: rgba(255,255,255,0.9); } 100% { background: rgba(0,0,0,0.1); } }
 
-#here-link {
-  text-decoration: underline;
-  cursor: pointer;
-  color: #0af;
+/* Responsive adjustments */
+@media (max-width:768px){
+  #hotspot-panel, #video-link-panel, #qr-content, #license-bar { max-width:90vw; font-size:0.9em; padding:8px 12px; }
+  #overlay-content { max-width:90vw; padding:20px 25px; font-size:1.2em; }
 }
 </style>
 </head>
@@ -127,74 +106,157 @@ body {
 
 <div id="panorama"></div>
 
+<!-- Intro overlay -->
 <div id="overlay">
   <div id="overlay-content">
-    <p>Hi, I'm Lex, a nobody magician who enjoys travel, tech and research. These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP.  
+    <p>Hi, I'm Lex, a nobody magician who enjoys travel, tech and research. These images are from my recent travels in Northern California taken with a DJI OSMO 360 camera at 120 MP.</p>
+    <p>If you would like to see my other work click <a href="#" id="preview-link">here</a>.</p>
+    <br><br>
+    <div id="instructions-line">Instructions</div>
+    <div id="instructions-list">
+      <p>• Click and drag to look around.</p>
+      <p>• Scroll to zoom in/out.</p>
+      <p>• Use fullscreen button for best experience.</p>
+    </div>
+  </div>
+  <p id="dismiss-message">Click Anywhere to Dismiss this Message</p>
+</div>
 
-If you would like to see my other work click <span id="here-link">here</span>.</p>
-    <p class="instructions">
-      <h3>Instructions</h3>
-      <ul>
-        <li>Click and drag to look around</li>
-        <li>Scroll to zoom in/out</li>
-        <li>Use fullscreen button for best experience</li>
-      </ul>
-    </p>
-    <p style="color:#ccc; margin-top:10px;">Click Anywhere to dismiss this message</p>
+<!-- Tooltip preview -->
+<div id="tooltip-preview">
+  <img src="https://i.imgur.com/eKxOrcZ.jpeg" width="250" style="border-radius:8px; display:block; margin:0 auto;"><br>
+  <a href="https://linktr.ee/lexofdystopia" target="_blank" style="color:#fff; text-decoration:underline;">https://linktr.ee/lexofdystopia</a>
+</div>
+
+<!-- Manhattan Beach hotspot panel -->
+<div id="hotspot-panel">
+  Manhattan Beach at Half Moon Bay, California located in the San Francisco Bay Area.<br>
+  The Ritz-Carlton can be seen on the distant cliffs.<br>
+  The coastal shores are lined with miles of golf courses.
+</div>
+
+<!-- 360 Video link panel -->
+<div id="video-link-panel">
+  Click Here to Watch a 360 Video of this Location
+</div>
+
+<!-- LICENSE bar -->
+<div id="license-bar">Loading license...</div>
+
+<!-- QR and VR buttons -->
+<div id="top-qr-button">QR</div>
+<div id="vr-button">VR</div>
+
+<!-- YouTube overlay -->
+<div id="youtube-overlay">
+  <div id="youtube-content">
+    <iframe id="youtube-frame" allowfullscreen></iframe>
+    <p>Click Anywhere to Dismiss this Video</p>
   </div>
 </div>
 
-<div id="top-panel">
-  Manhattan Beach at Half Moon Bay, California located in the San Francisco Bay Area. The Ritz-Carlton can be seen on the distant cliffs. The coastal shores are lined with miles of golf courses.
+<!-- QR overlay -->
+<div id="qr-overlay">
+  <div id="qr-content">
+    <img src="VRQR.png" alt="QR Code">
+    <p>Click Anywhere to Dismiss</p>
+  </div>
 </div>
-
-<div id="video-panel">
-  <a href="https://www.youtube.com/watch?v=sfYM1-_WbWk" target="_blank">Click Here to Watch a 360 Video of this Location</a>
-  <p style="color:#ccc; font-size:0.9em; margin-top:5px;">Click Anywhere to Dismiss this Video</p>
-</div>
-
-<div id="license-bar">Loading license...</div>
 
 <script src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
 <script>
+// Panorama
+const panoramaImg = "https://i.imgur.com/FYdmUI3.jpeg";
 const viewer = pannellum.viewer('panorama', {
-  type: "equirectangular",
-  panorama: "https://i.imgur.com/FYdmUI3.jpeg",
-  autoLoad: true,
-  compass: false,
-  showZoomCtrl: false,
-  showFullscreenCtrl: true,
-  hfov: 100
+  type:'equirectangular',
+  panorama: panoramaImg,
+  autoLoad:true,
+  hfov:100,
+  showFullscreenCtrl:true,
+  showZoomCtrl:false
 });
 
+// Intro dismissal
 const overlay = document.getElementById('overlay');
-const topPanel = document.getElementById('top-panel');
-const videoPanel = document.getElementById('video-panel');
-
-overlay.addEventListener('click', () => {
-  overlay.style.display = 'none';
-  topPanel.style.display = 'block';
-  videoPanel.style.display = 'block';
+const hotspotPanel = document.getElementById('hotspot-panel');
+const videoLinkPanel = document.getElementById('video-link-panel');
+overlay.addEventListener('click', ()=>{
+  overlay.style.display='none';
+  hotspotPanel.style.display='block';
+  videoLinkPanel.style.display='block';
+  hotspotPanel.classList.add('pulse-white');
+  setTimeout(()=>hotspotPanel.classList.remove('pulse-white'),2000);
+  detectVRHeadset().then(info=>{
+    if(!info) return;
+    document.getElementById('vr-button').style.display='block';
+  });
 });
 
-// Load LICENSE
-fetch('LICENSE').then(r => r.ok ? r.text() : 'LICENSE file not found.').then(text => {
-  document.getElementById('license-bar').textContent = text;
+// LICENSE
+fetch('LICENSE')
+  .then(r=>r.ok?r.text():Promise.reject('LICENSE not found'))
+  .then(text=>document.getElementById('license-bar').textContent=text)
+  .catch(err=>document.getElementById('license-bar').textContent='LICENSE file not found.');
+
+// Tooltip preview
+const previewLink = document.getElementById('preview-link');
+const tooltip = document.getElementById('tooltip-preview');
+previewLink.addEventListener('mouseenter',e=>{
+  const rect = e.target.getBoundingClientRect();
+  tooltip.style.top=(rect.top-tooltip.offsetHeight-10)+'px';
+  tooltip.style.left=(rect.left+rect.width/2-tooltip.offsetWidth/2)+'px';
+  tooltip.style.display='block';
+});
+previewLink.addEventListener('mouseleave',()=>tooltip.style.display='none');
+previewLink.addEventListener('click', e=>{
+  e.stopPropagation();
+  window.open("https://linktr.ee/lexofdystopia","_blank");
 });
 
-// "here" link preview
-document.getElementById('here-link').addEventListener('click', e => {
-  e.stopPropagation(); // don't dismiss overlay
-  window.open('https://linktr.ee/lexofdystopia','_blank');
+// 360 Video link
+const videoLink = document.getElementById('video-link-panel');
+const youtubeOverlay = document.getElementById('youtube-overlay');
+const youtubeFrame = document.getElementById('youtube-frame');
+videoLink.addEventListener('click', e=>{
+  e.stopPropagation();
+  youtubeFrame.src="https://www.youtube.com/embed/sfYM1-_WbWk";
+  youtubeOverlay.style.display='flex';
+  setTimeout(()=>youtubeOverlay.style.opacity=1,50);
+});
+youtubeOverlay.addEventListener('click', ()=>{
+  youtubeOverlay.style.opacity=0;
+  setTimeout(()=> { youtubeOverlay.style.display='none'; youtubeFrame.src=''; }, 300);
 });
 
-// Dismiss video panel if clicked outside link
-videoPanel.addEventListener('click', (e) => e.stopPropagation());
-document.addEventListener('click', (e) => {
-  if (!videoPanel.contains(e.target) && videoPanel.style.display === 'block') {
-    videoPanel.style.display = 'none';
-  }
+// QR button
+const qrBtn = document.getElementById('top-qr-button');
+const qrOverlay = document.getElementById('qr-overlay');
+qrBtn.addEventListener('click', e=>{
+  e.stopPropagation();
+  qrOverlay.style.display='flex';
+  setTimeout(()=>qrOverlay.style.opacity=1,50);
 });
+qrOverlay.addEventListener('click', ()=>{
+  qrOverlay.style.opacity=0;
+  setTimeout(()=> qrOverlay.style.display='none', 300);
+});
+
+// VR detection
+async function detectVRHeadset(){
+  if(navigator.xr){
+    try{
+      const supported = await navigator.xr.isSessionSupported('immersive-vr');
+      if(supported) return {manufacturer:'Oculus', model:'Quest 3'};
+      else return null;
+    }catch(e){ return null; }
+  } else if(navigator.userAgent.includes("Oculus") || navigator.userAgent.includes("Quest")){
+    return {manufacturer:'Oculus', model:'Quest 3'};
+  } else return null;
+}
+
+// VR immersive button
+const vrBtn = document.getElementById('vr-button');
+vrBtn.addEventListener('click', e=>{ e.stopPropagation(); viewer.enterVR(); });
 </script>
 </body>
 </html>
